syntax="proto3";

option  go_package="/genproto";


package  protos;



import "common.proto";


message  CreateMealRequest{
  string  id=1;
  string  kitchen_id=2;
  string  name=3;
  string  description=4;
  float  price=5;
  string  category=6;
  bool available=11;
}

message  UpdateMealRequest{
  string  id=1;
  string  name=2;
  float  price=3;
  bool available=4;
}
message MealResponse{
  string  id=1;
  string  kitchen_id=2;
  string  name=3;
  string  description=4;
  float  price=5;
  string  category=6;
  repeated string ingredients=7;
  repeated  string allergens=8;
  repeated  string dietary_info=10;
  bool available=11;
  string  created_at=12;
  string  updated_at=13;
}

message GetAllMealRequest{
  string  kitchen_id=1;
  string  name=2;
  float  price=3;
  string  category=4;
  bool available=5;
  LimitOffset limit_offset=6;
}
message  MealsResponse{
  repeated  MealResponse meals=1;
}

service  OrderService{
  rpc CreateMeal(CreateMealRequest)returns(MealResponse);
  rpc UpdateMeal(UpdateMealRequest)returns(MealResponse);
  rpc Delete(IdRequest)returns(Void);
  rpc GetAllMeal(GetAllMealRequest) returns(MealsResponse);
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderStatusResponse);
  rpc GetOrdersForCustomer(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetOrdersForChef(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetOrderById(GetOrderRequest) returns (OrderResponse);
  rpc CreateReview(CreateReviewRequest) returns (ReviewResponse);
  rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse);
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc UpdateNutrition(UpdateNutritionInfoRequest)returns(UpdateNutritionInfoResponse);
}

message CreatePaymentRequest {
  string order_id = 1;
  string payment_method = 2;
  string card_number = 3;
  string expiry_date = 4;
  string cvv = 5;
}

message CreatePaymentResponse {
  string id = 1;
  string order_id = 2;
  double amount = 3;
  string status = 4;
  string transaction_id = 5;
  string created_at = 6;
}

message CreateOrderRequest {
  string  id=1;
  string user_id = 2;
  string kitchen_id = 3;
  repeated OrderItem items = 4;
  double total_amount = 5;
  string status = 6;
  string delivery_address = 7;
  string delivery_time = 8;
}
message OrderResponse {
  string Id = 1;
  string user_id = 2;
  string kitchen_id = 3;
  repeated OrderItem items = 4;
  double total_amount = 5;
  string status = 6;
  string delivery_address = 7;
  string delivery_time = 8;
  string created_at = 9;
  string updated_at = 10;
}
message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}
message OrderStatusResponse {
  string id = 1;
  string status = 2;
  string updated_at = 3;
}

message GetOrdersRequest {
  string user_id = 1;
  string kitchen_id = 2;
  string status = 3;
  LimitOffset limit_offset = 4;
}

message GetOrdersResponse {
  repeated OrderResponse orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetOrderRequest {
  string id = 1;
}

message OrderItem {
  string dish_id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}




message CreateReviewRequest {
  string order_id = 1;
  string user_id = 2;
  string kitchen_id = 3;
  double rating = 4;
  string comment = 5;
}

message ReviewResponse {
  string id = 1;
  string order_id = 2;
  string user_id = 3;
  string kitchen_id = 4;
  double rating = 5;
  string comment = 6;
  string created_at = 7;
}

message GetReviewsRequest {
  string kitchen_id = 1;
  LimitOffset limit_offset = 2;
}

message GetReviewsResponse {
  repeated ReviewResponse reviews = 1;
  int32 total = 2;
  double average_rating = 3;
  LimitOffset limit_offset=4;
}


// qoshimcha api lar


message NutritionInfo {
  int32 calories = 1;
  int32 protein = 2;
  int32 carbohydrates = 3;
  int32 fat = 4;
}

message Dish {
  string id = 1;
  string name = 2;
  repeated string allergens = 3;
  NutritionInfo nutrition_info = 4;
  repeated string dietary_info = 5;
  string updated_at = 6;
}

message UpdateNutritionInfoRequest {
  string dish_id = 1;
  repeated string allergens = 2;
  NutritionInfo nutrition_info = 3;
  repeated string dietary_info = 4;
}

message UpdateNutritionInfoResponse {
  Dish dish = 1;
}
